完善项目，增加自定义注解示例接口